fix(jpa): 修复批量保存异常处理和缓存清理问题
- 修复 PartialBatchCommitException 构造函数，添加失败实体列表参数
- 修改 BulkTransactionHelper 中 em.clear() 与 tx.commit() 的执行顺序
- 优化 CacheEvictionHelper 反射初始化的重试机制和退避策略
- 修复 CteSpec 中 SQL 注入检测的注释模式匹配问题
- 改进 DefaultMyJpaRepository 中硬删除路径的批处理实现
- 在 EncryptConverter 解密后清理敏感数据缓冲区
- 优化 EntityFieldExtractor 中 boolean 类型 getter 缓存键的创建
- 修复 GlobalConfigHolder 中缓存更新的原子性问题
- 在 InClauseBuilder 中添加防御性复制避免并发修改异常
- 添加 KeysetPaginationHelper 中 pageSize 参数的有效性验证
- 修复 MergeSpec 中 merge 操作后实体引用的更新问题
- 修复 MyJpaTemplate 中软删除过滤器的应用逻辑
- 添加 PredicateHelper 中对无穷大值的范围比较验证
- 优化 QueryCacheManager 中缓存清理的竞态条件处理
- 为 QueryMetricsCollector 添加关闭方法以清理资源
- 修复 SampledEvictionCache 中缓存重建的顺序问题
- 增强 SoftDeleteBulkExecutor 中事务回滚的可靠性
- 修复 SoftDeleteHelper 中数据库方言检测的并发安全问题